--- a/the_guardian_project.html
+++ b/the_guardian_project.html
@@ -70,7 +70,7 @@
 			<h3 style="text-align: center;">Screenshots</h3>
 
 			<article style="text-align: center;">
-				<video width="1000" controls>
+				<video width="100%" controls>
 					<source src="images/ElGuardian/guardianattacks.mp4" type="video/mp4">
 					Your browser does not support the video tag.
 				  </video>
