--- a/the_guardian_project.html
+++ b/the_guardian_project.html
@@ -29,8 +29,10 @@
 		<!-- Nav -->
 		<nav id="nav">
 			<ul class="icons">
-				<li><a href="https://www.linkedin.com/in/alberto-cortegana-alonso-247276210/" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-				<li><a href="https://github.com/Yingadi" class="icon brands fa-github" target="_blank"><span class="label">GitHub</span></a></li>
+				<li><a href="https://www.linkedin.com/in/alberto-cortegana-alonso-247276210/" target="_blank"
+						class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+				<li><a href="https://github.com/Yingadi" class="icon brands fa-github" target="_blank"><span
+							class="label">GitHub</span></a></li>
 			</ul>
 		</nav>
 
@@ -56,8 +58,10 @@
 						mission to escort the child to the sacred place,
 						protecting them from any danger.</p>
 
-					<p><b>Technical Details:</b> This game is a platform-metroidvania game with a 2D pixel art aesthetic. It was developed 
-						using the unity 2D engine and features exploration and puzzle mechanics, as well as combat with different types of enemies</p>
+					<p><b>Technical Details:</b> This game is a platform-metroidvania game with a 2D pixel art
+						aesthetic. It was developed
+						using the unity 2D engine and features exploration and puzzle mechanics, as well as combat with
+						different types of enemies</p>
 
 				</header>
 				<p><b>My role:</b> I was responsible for designing the level layout of zone 5, creating the tileset with
@@ -69,23 +73,27 @@
 
 			<h3 style="text-align: center;">Screenshots</h3>
 
-			<article style="text-align: center;">
+			<article style="max-width: 100%; height: auto;">
 				<video width="100%" controls>
 					<source src="images/ElGuardian/guardianattacks.mp4" type="video/mp4">
 					Your browser does not support the video tag.
-				  </video>
+				</video>
 			</article>
 			<article style="text-align: center;">
-				<img src="images/ElGuardian/jumps.png" alt="" width="1000" width="1000" style="width: 1000px; height: auto;"/>
+				<img src="images/ElGuardian/jumps.png" alt="" width="1000" width="1000"
+					style="width: 1000px; height: auto;" />
 			</article>
 			<article style="text-align: center;">
-				<img src="images/ElGuardian/bridge.png" alt="" width="1000" width="1000" style="width: 1000px; height: auto;"/>
+				<img src="images/ElGuardian/bridge.png" alt="" width="1000" width="1000"
+					style="width: 1000px; height: auto;" />
 			</article>
 			<article style="text-align: center;">
-				<img src="images/ElGuardian/cave.png" alt="" width="1000" width="1000" style="width: 1000px; height: auto;"/>
+				<img src="images/ElGuardian/cave.png" alt="" width="1000" width="1000"
+					style="width: 1000px; height: auto;" />
 			</article>
 			<article style="text-align: center;">
-				<img src="images/ElGuardian/high_jump.png" alt="" width="1000" width="1000" style="width: 1000px; height: auto;"/>
+				<img src="images/ElGuardian/high_jump.png" alt="" width="1000" width="1000"
+					style="width: 1000px; height: auto;" />
 			</article>
 		</div>
 
