--- a/the_guardian_project.html
+++ b/the_guardian_project.html
@@ -80,8 +80,7 @@
 				</video>
 			</article>
 			<article style="text-align: center;">
-				<img src="images/ElGuardian/jumps.png" alt="" width="1000" width="1000"
-					style="width: 1000px; height: auto;" />
+				<img src="images/ElGuardian/jumps.png" class="image fit"/>
 			</article>
 			<article style="text-align: center;">
 				<img src="images/ElGuardian/bridge.png" alt="" width="1000" width="1000"
