the guardian html fix

--- a/the_guardian_project.html
+++ b/the_guardian_project.html
@@ -79,20 +79,17 @@
 					Your browser does not support the video tag.
 				</video>
 			</article>
-			<article style="text-align: center;">
-				<img src="images/ElGuardian/jumps.png" class="image fit"/>
+			<article style="max-width: 100%; height: auto;">
+				<img src="images/ElGuardian/jumps.png"/>
 			</article>
-			<article style="text-align: center;">
-				<img src="images/ElGuardian/bridge.png" alt="" width="1000" width="1000"
-					style="width: 1000px; height: auto;" />
+			<article style="max-width: 100%; height: auto;">
+				<img src="images/ElGuardian/bridge.png" alt=""/>
 			</article>
-			<article style="text-align: center;">
-				<img src="images/ElGuardian/cave.png" alt="" width="1000" width="1000"
-					style="width: 1000px; height: auto;" />
+			<article style="max-width: 100%; height: auto;">
+				<img src="images/ElGuardian/cave.png" alt=""/>
 			</article>
-			<article style="text-align: center;">
-				<img src="images/ElGuardian/high_jump.png" alt="" width="1000" width="1000"
-					style="width: 1000px; height: auto;" />
+			<article style="max-width: 100%; height: auto;">
+				<img src="images/ElGuardian/high_jump.png" alt=""/>
 			</article>
 		</div>
 
