--- a/the_guardian_project.html
+++ b/the_guardian_project.html
@@ -80,16 +80,16 @@
 				</video>
 			</article>
 			<article style="max-width: 100%; height: auto;">
-				<img src="images/ElGuardian/jumps.png"/>
+				<img width="100%" src="images/ElGuardian/jumps.png"/>
 			</article>
 			<article style="max-width: 100%; height: auto;">
-				<img src="images/ElGuardian/bridge.png" alt=""/>
+				<img width="100%" src="images/ElGuardian/bridge.png" alt=""/>
 			</article>
 			<article style="max-width: 100%; height: auto;">
-				<img src="images/ElGuardian/cave.png" alt=""/>
+				<img width="100%" src="images/ElGuardian/cave.png" alt=""/>
 			</article>
 			<article style="max-width: 100%; height: auto;">
-				<img src="images/ElGuardian/high_jump.png" alt=""/>
+				<img width="100%" src="images/ElGuardian/high_jump.png" alt=""/>
 			</article>
 		</div>
 
