--- a/the_guardian_project.html
+++ b/the_guardian_project.html
@@ -79,17 +79,17 @@
 					Your browser does not support the video tag.
 				</video>
 			</article>
-			<article style="max-width: 100%; height: auto;">
-				<img width="100%" src="images/ElGuardian/jumps.png"/>
+			<article class="image fit">
+				<img src="images/ElGuardian/jumps.png"/>
 			</article>
-			<article style="max-width: 100%; height: auto;">
-				<img width="100%" src="images/ElGuardian/bridge.png" alt=""/>
+			<article class="image fit">
+				<img src="images/ElGuardian/bridge.png" alt=""/>
 			</article>
-			<article style="max-width: 100%; height: auto;">
-				<img width="100%" src="images/ElGuardian/cave.png" alt=""/>
+			<article class="image fit">
+				<img src="images/ElGuardian/cave.png" alt=""/>
 			</article>
-			<article style="max-width: 100%; height: auto;">
-				<img width="100%" src="images/ElGuardian/high_jump.png" alt=""/>
+			<article class="image fit">
+				<img src="images/ElGuardian/high_jump.png" alt=""/>
 			</article>
 		</div>
 
