--- a/dimadventures.html
+++ b/dimadventures.html
@@ -51,26 +51,26 @@
 
 			<h3 style="text-align: center;">Videos</h3>
 
-			<article style="text-align: center;">
-				<video width="1000" controls>
+			<article style="max-width: 100%; height: auto;">
+				<video width="100%" controls>
 					<source src="images/Dimadventures/tutorial.mp4" type="video/mp4">
 					Your browser does not support the video tag.
 				  </video>				  
 			</article>
-			<article style="text-align: center;">
-				<video width="1000" controls>
+			<article style="max-width: 100%; height: auto;">
+				<video width="100%" controls>
 					<source src="images/Dimadventures/death.mp4" type="video/mp4">
 					Your browser does not support the video tag.
 				  </video>				  
 			</article>
-			<article style="text-align: center;">
-				<video width="1000" controls>
+			<article style="max-width: 100%; height: auto;">
+				<video width="100%" controls>
 					<source src="images/Dimadventures/win.mp4" type="video/mp4">
 					Your browser does not support the video tag.
 				  </video>				  
 			</article>
-			<article style="text-align: center;">
-				<video width="1000" controls>
+			<article style="max-width: 100%; height: auto;">
+				<video width="100%" controls>
 					<source src="images/Dimadventures/kill.mp4" type="video/mp4">
 					Your browser does not support the video tag.
 				  </video>				  
@@ -78,17 +78,17 @@
 
 			<h3 style="text-align: center;">Screenshots</h3>
 
-			<article style="text-align: center;">
-				<img src="images/Dimadventures/headenemies.png" alt="" width="1000" width="1000" style="width: 1000px; height: auto;"/>
+			<article class="image fit">
+				<img src="images/Dimadventures/headenemies.png" alt=""/>
 			</article>
-			<article style="text-align: center;">
-				<img src="images/Dimadventures/cavestart.png" alt="" width="1000" width="1000" style="width: 1000px; height: auto;"/>
+			<article class="image fit">
+				<img src="images/Dimadventures/cavestart.png" alt=""/>
 			</article>
-			<article style="text-align: center;">
-				<img src="images/Dimadventures/caveheadenemies.png" alt="" width="1000" width="1000" style="width: 1000px; height: auto;"/>
+			<article class="image fit">
+				<img src="images/Dimadventures/caveheadenemies.png" alt=""/>
 			</article>
-			<article style="text-align: center;">
-				<img src="images/Dimadventures/cavefires.png" alt="" width="1000" width="1000" style="width: 1000px; height: auto;"/>
+			<article class="image fit">
+				<img src="images/Dimadventures/cavefires.png" alt=""/>
 			</article>
 		</div>
 
