--- a/ahora_calma_project.html
+++ b/ahora_calma_project.html
@@ -58,21 +58,17 @@
 
 			<h3 style="text-align: center;">Screenshots</h3>
 
-			<article style="text-align: center;">
-				<img src="images/AhoraCalma/main_menu.png" alt="" width="1000" width="1000"
-					style="width: 1000px; height: auto;" />
+			<article class="image fit">
+				<img src="images/AhoraCalma/main_menu.png" alt=""/>
 			</article>
-			<article style="text-align: center;">
-				<img src="images/AhoraCalma/book_space.png" alt="" width="1000" width="1000"
-					style="width: 1000px; height: auto;" />
+			<article class="image fit">
+				<img src="images/AhoraCalma/book_space.png" alt=""/>
 			</article>
-			<article style="text-align: center;">
-				<img src="images/AhoraCalma/my_bookings.png" alt="" width="1000" width="1000"
-					style="width: 1000px; height: auto;" />
+			<article class="image fit">
+				<img src="images/AhoraCalma/my_bookings.png" alt=""/>
 			</article>
-			<article style="text-align: center;">
-				<img src="images/AhoraCalma/admin.png" alt="" width="1000" width="1000"
-					style="width: 1000px; height: auto;" />
+			<article class="image fit">
+				<img src="images/AhoraCalma/admin.png" alt=""/>
 			</article>
 		</div>
 
