--- a/index.html
+++ b/index.html
@@ -1,131 +1,11 @@
-<!DOCTYPE HTML>
-<!--
-	Massively by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
-	<head>
-		<title>Alberto Cortegana portfolio</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
-
-		<!-- Wrapper -->
-			<div id="wrapper" class="fade-in">
-
-				<!-- Intro -->
-					<div id="intro">
-						<h1>My portfolio</h1>
-						<p>A little showcase of some of my projects</p>
-						<ul class="actions">
-							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
-						</ul>
-					</div>
-
-				<!-- Header -->
-					<header id="header">
-						<a href="index.html" class="logo">Welcome</a>
-					</header>
-
-				<!-- Nav -->
-					<nav id="nav">
-						<ul class="links">
-							<li class="active"><a href="index.html">This is my work</a></li>
-						</ul>
-						<ul class="icons">
-							<li><a href="https://www.linkedin.com/in/alberto-cortegana-alonso-247276210/" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="https://github.com/Yingadi" class="icon brands fa-github" target="_blank"><span class="label">GitHub</span></a></li>
-						</ul>
-					</nav>
-
-				<!-- Main -->
-					<div id="main">
-
-						<!-- Posts -->
-							<section class="posts">
-								<article>
-									<header>
-										<h2><a href="the_guardian_project.html">El Guardián<br /></a></h2>
-									</header>
-									<a href="the_guardian_project.html" class="image fit"><img src="images/ElGuardian/ElGuardianMenu.png" alt="" /></a>
-									<p>A videogame demo developed as part of a specialization course, created in collaboration with my classmates</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Available soon on Itch.io</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<h2><a href="ahora_calma_project.html">Ahora Calma App</a></h2>
-									</header>
-									<a href="ahora_calma_project.html" class="image fit"><img src="images/AhoraCalma/ahoracalmalogo.jpeg" alt="" /></a>
-									<p>A progressive web app designed for a new facility to manage users and space reservations</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Website under creation</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<h2><a href="dimadventures.html">Dimadventures</a></h2>
-									</header>
-									<a href="dimadventures.html" class="image fit"><img src="images/Dimadventures/mainmenu.png" alt="" /></a>
-									<p>A mini-game created as a 2D development practice with Unity for my specialization course</p>
-									<ul class="actions special">
-										<li><a href="https://drive.google.com/file/d/1UGKWBgIHk010KzhMgbpfRKwqnxwWnYAm/view?usp=sharing" target="_blank" class="button">Try it! (Windows)</a></li>
-										<li><a href="https://github.com/Yingadi/Dimadventures" target="_blank" class="button">Check out repository</a></li>
-									</ul>
-								</article>
-								<!-- <article>
-									<header>
-										<h2><a href="#">Zombie Escape</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>A mini-game created as a 3D development practice with Unity for my specialization course</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Check out repository</a></li>
-									</ul>
-								</article>
-							</section> -->
-
-						<!-- Footer -->
-
-					</div>
-
-				<!-- Footer -->
-					<footer id="footer">
-						<section class="split contact">
-							<section>
-								<h3>Email</h3>
-								<p><a href="mailto:albertocorteganaalonso@gmail.com">albertocorteganaalonso@gmail.com</a></p>
-							</section>
-							<section>
-								<h3>Social</h3>
-								<ul class="icons alt">
-									<li><a href="https://www.linkedin.com/in/alberto-cortegana-alonso-247276210/" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="https://github.com/Yingadi" class="icon brands fa-github" target="_blank"><span class="label">GitHub</span></a></li>
-								</ul>
-							</section>
-						</section>
-					</footer>
-
-				<!-- Copyright -->
-					<div id="copyright">
-						<ul><li>&copy; ACA Portfolio</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
-					</div>
-
-			</div>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
-	</body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>GB Media</title>
+</head>
+<body>
+	<h1>Buenas tardes</h1>
+</body>
 </html>
