--- a/index.html
+++ b/index.html
@@ -4,8 +4,29 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>GB Media</title>
+	<style>
+		*{
+			font-family: Arial, Helvetica, sans-serif;
+		}
+
+		ul{
+			position: relative;
+			right: 20px;
+			text-align: center;
+			margin-top: 50px;
+		}
+
+		ul > li{
+			display: inline;
+			padding: 20px;
+		}
+	</style>
 </head>
 <body>
-	<h1>Buenas tardes</h1>
+	<h1 style="text-align: center;">MEDIA</h1>
+	<ul>
+		<li><a href="#">RENDERING</a></li>
+		<li><a href="#">AUDIO</a></li>
+	</ul>
 </body>
 </html>
