--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 <body>
 	<h1 style="text-align: center;">MEDIA</h1>
 	<ul>
-		<li><a href="#">RENDERING</a></li>
-		<li><a href="#">AUDIO</a></li>
+		<li><a href="pages/wobble.htm">WOBBLE EFFECT</a></li>
+		<li><a href="pages/audio.htm">AUDIO</a></li>
 	</ul>
 </body>
 </html>
